# webloader

./: .pre-commit-config.yaml  Dockerfile  README.md  ci-test-requirements.txt  fetch.py  pyproject.toml
tests/: test_webloader.py  utils.py
webloader/: __init__.py  constants.py  models.py  webloader.py
